--- a/README
+++ b/README
@@ -1,12 +1,17 @@
- yum install gcc zlib-devel bzip2 bzip2-devel readline readline-devel sqlite sqlite-devel openssl openssl-devel git
- git clone https://github.com/yyuu/pyenv.git ~/.pyenv
+    yum install gcc zlib-devel bzip2 bzip2-devel readline readline-devel sqlite sqlite-devel openssl openssl-devel git
+    git clone https://github.com/yyuu/pyenv.git ~/.pyenv
 
- pyenv install 3.4.1
- pyenv global 3.4.1
- pyenv rehash
- pyenv version
+    echo 'export PYENV_ROOT="$HOME/.pyenv"' >> ~/.bash_profile
+    echo 'export PATH="$PYENV_ROOT/bin:$PATH"' >> ~/.bash_profile
+    echo 'eval "$(pyenv init -)"' >> ~/.bash_profile
 
- django-admin startproject mysite
- cd mysite
- ../bin/python manage.py runserver
+
+    pyenv install 3.4.1
+    pyenv global 3.4.1
+    pyenv rehash
+    pyenv version
+
+    django-admin startproject mysite
+    cd mysite
+    ../bin/python manage.py runserver
 
